Add feature map visualization

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -7,11 +7,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "\n",
     "sys.path.append('../src')\n",
+    "\n",
     "from data_loading import BavarianBuildingDataset, generator\n",
-    "from mask_rcnn import MaskRCNN\n",
-    "from visualize import Visualizer"
+    "from visualize import Visualizer\n",
+    "from mask_rcnn import MaskRCNN"
    ]
   },
   {
@@ -29,34 +29,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"Mask_RCNN\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      " input_image (InputLayer)       [(None, 250, 250, 3  0           []                               \n",
-      "                                )]                                                                \n",
-      "                                                                                                  \n",
-      " Backbone (Functional)          (None, 8, 8, 2048)   23587712    ['input_image[0][0]']            \n",
-      "                                                                                                  \n",
-      " RPN (Functional)               [(None,),            9464368     ['Backbone[0][0]']               \n",
-      "                                 (None, 4)]                                                       \n",
-      "                                                                                                  \n",
-      " ROI_Align (Functional)         (None, 7, 7, 2048)   0           ['Backbone[0][0]',               \n",
-      "                                                                  'RPN[0][1]']                    \n",
-      "                                                                                                  \n",
-      " Classifier (Functional)        [(None, 2),          102771722   ['ROI_Align[0][0]']              \n",
-      "                                 (None, 2, 4)]                                                    \n",
-      "                                                                                                  \n",
-      " Mask_Head (Functional)         (None, 14, 14, 2)    5571842     ['ROI_Align[0][0]']              \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 141,395,644\n",
-      "Trainable params: 117,811,004\n",
-      "Non-trainable params: 23,584,640\n",
-      "__________________________________________________________________________________________________\n"
+     "ename": "ValueError",
+     "evalue": "Exception encountered when calling layer \"decode_predictions\" (type DecodePredictions).\n\nin user code:\n\n    File \"c:\\Users\\david\\programming\\Projects\\RoofSpotter\\notebooks\\../src\\rpn.py\", line 69, in call  *\n        roi_x = roi_boxes[..., 0] * anchor_w + anchor_x\n\n    ValueError: Dimensions must be equal, but are 8 and 1024 for '{{node decode_predictions/mul}} = Mul[T=DT_FLOAT](decode_predictions/strided_slice_8, decode_predictions/sub)' with input shapes: [?,8,8], [1024].\n\n\nCall arguments received by layer \"decode_predictions\" (type DecodePredictions):\n  • inputs=['tf.Tensor(shape=(None, 8, 8, 32), dtype=float32)', 'tf.Tensor(shape=(None, 8, 8, 64), dtype=float32)']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mMaskRCNN\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39msummary()\n",
+      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\notebooks\\../src\\mask_rcnn.py:17\u001b[0m, in \u001b[0;36mMaskRCNN.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Initialize the components\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackbone \u001b[38;5;241m=\u001b[39m Backbone(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig)\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrpn \u001b[38;5;241m=\u001b[39m \u001b[43mRPN\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackbone\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroi_align_layer \u001b[38;5;241m=\u001b[39m ROIAlignLayer(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackbone, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrpn)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclassifier \u001b[38;5;241m=\u001b[39m Classifier(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroi_align_layer)\n",
+      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\notebooks\\../src\\rpn.py:11\u001b[0m, in \u001b[0;36mRPN.__init__\u001b[1;34m(self, config, backbone, name)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m config\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackbone \u001b[38;5;241m=\u001b[39m backbone\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39m_name \u001b[38;5;241m=\u001b[39m name\n",
+      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\notebooks\\../src\\rpn.py:34\u001b[0m, in \u001b[0;36mRPN.build_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Decode the predicted offsets to get the proposed bounding boxes\u001b[39;00m\n\u001b[0;32m     33\u001b[0m anchors \u001b[38;5;241m=\u001b[39m AnchorGenerator\u001b[38;5;241m.\u001b[39mgenerate_anchors(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig, feature_map_width\u001b[38;5;241m=\u001b[39mfeature_map_shape[\u001b[38;5;241m2\u001b[39m], feature_map_height\u001b[38;5;241m=\u001b[39mfeature_map_shape[\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m---> 34\u001b[0m roi_scores, roi_boxes \u001b[38;5;241m=\u001b[39m \u001b[43mDecodePredictions\u001b[49m\u001b[43m(\u001b[49m\u001b[43manchors\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mroi_scores\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroi_boxes\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Apply Non-Maximum Suppression (NMS) to the proposed regions\u001b[39;00m\n\u001b[0;32m     37\u001b[0m roi_scores, roi_boxes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_non_max_suppression(roi_scores, roi_boxes)\n",
+      "File \u001b[1;32mc:\\Users\\david\\anaconda3\\envs\\roof_spotter\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_fileaoaiqb6u.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__call\u001b[1;34m(self, inputs)\u001b[0m\n\u001b[0;32m     13\u001b[0m anchor_w \u001b[38;5;241m=\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39manchors[:, \u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m-\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39manchors[:, \u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     14\u001b[0m anchor_h \u001b[38;5;241m=\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39manchors[:, \u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m-\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39manchors[:, \u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m---> 15\u001b[0m roi_x \u001b[38;5;241m=\u001b[39m \u001b[43mag__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mld\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroi_boxes\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mag__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mld\u001b[49m\u001b[43m(\u001b[49m\u001b[43manchor_w\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(anchor_x)\n\u001b[0;32m     16\u001b[0m roi_y \u001b[38;5;241m=\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(roi_boxes)[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(anchor_h) \u001b[38;5;241m+\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(anchor_y)\n\u001b[0;32m     17\u001b[0m roi_w \u001b[38;5;241m=\u001b[39m ag__\u001b[38;5;241m.\u001b[39mconverted_call(ag__\u001b[38;5;241m.\u001b[39mld(tf)\u001b[38;5;241m.\u001b[39mexp, (ag__\u001b[38;5;241m.\u001b[39mld(roi_boxes)[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m2\u001b[39m],), \u001b[38;5;28;01mNone\u001b[39;00m, fscope) \u001b[38;5;241m*\u001b[39m ag__\u001b[38;5;241m.\u001b[39mld(anchor_w)\n",
+      "\u001b[1;31mValueError\u001b[0m: Exception encountered when calling layer \"decode_predictions\" (type DecodePredictions).\n\nin user code:\n\n    File \"c:\\Users\\david\\programming\\Projects\\RoofSpotter\\notebooks\\../src\\rpn.py\", line 69, in call  *\n        roi_x = roi_boxes[..., 0] * anchor_w + anchor_x\n\n    ValueError: Dimensions must be equal, but are 8 and 1024 for '{{node decode_predictions/mul}} = Mul[T=DT_FLOAT](decode_predictions/strided_slice_8, decode_predictions/sub)' with input shapes: [?,8,8], [1024].\n\n\nCall arguments received by layer \"decode_predictions\" (type DecodePredictions):\n  • inputs=['tf.Tensor(shape=(None, 8, 8, 32), dtype=float32)', 'tf.Tensor(shape=(None, 8, 8, 64), dtype=float32)']"
      ]
     }
    ],
