Add batch_size parameter to Config class

--- a/testing/component_testing.ipynb
+++ b/testing/component_testing.ipynb
@@ -43,7 +43,7 @@
     "config = Config()\n",
     "\n",
     "dataset = BavarianBuildingDataset(image_dir='../data/bbd250-image', mask_dir='../data/bbd250-umring')\n",
-    "gen = generator(dataset, dataset.train_test_val_split()[0], batch_size=32)\n",
+    "gen = generator(dataset, dataset.train_test_val_split()[0], batch_size=config.batch_size)\n",
     "images, masks = next(gen)\n",
     "\n",
     "testing_image = images[0]\n",
