Fix anchor scales and NMS for RPN

--- a/testing/component_testing.ipynb
+++ b/testing/component_testing.ipynb
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 1s/step\n"
+      "1/1 [==============================] - 3s 3s/step\n"
      ]
     },
     {
@@ -124,9 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KerasTensor(type_spec=TensorSpec(shape=(None, 4), dtype=tf.float32, name=None), name='tf.reshape/Reshape:0', description=\"created by layer 'tf.reshape'\")\n",
-      "#######################\n",
-      "KerasTensor(type_spec=TensorSpec(shape=(None, 4), dtype=tf.float32, name=None), name='tf.compat.v1.gather/GatherV2:0', description=\"created by layer 'tf.compat.v1.gather'\")\n"
+      "(None, 4)\n",
+      "(None, 8, 8, 256)\n"
      ]
     },
     {
@@ -138,8 +137,8 @@
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m rpn \u001b[38;5;241m=\u001b[39m \u001b[43mRPN\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbackbone\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m roi_boxes \u001b[38;5;241m=\u001b[39m rpn\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mpredict(feature_maps)\n",
       "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\testing\\../src\\rpn.py:10\u001b[0m, in \u001b[0;36mRPN.__init__\u001b[1;34m(self, config, backbone, name)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m config\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackbone \u001b[38;5;241m=\u001b[39m backbone\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39m_name \u001b[38;5;241m=\u001b[39m name\n",
-      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\testing\\../src\\rpn.py:41\u001b[0m, in \u001b[0;36mRPN.build_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(filtered_anchor_offsets)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Transform the predicted offsets to absolute coordinates in the feature maps\u001b[39;00m\n\u001b[1;32m---> 41\u001b[0m roi_boxes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode_offsets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiltered_anchor_offsets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manchors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m model \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mModel(inputs\u001b[38;5;241m=\u001b[39mfeature_maps, outputs\u001b[38;5;241m=\u001b[39mroi_boxes)\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
-      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\testing\\../src\\rpn.py:66\u001b[0m, in \u001b[0;36mRPN.decode_offsets\u001b[1;34m(self, offsets, anchors)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode_offsets\u001b[39m(\u001b[38;5;28mself\u001b[39m, offsets, anchors):\n\u001b[1;32m---> 66\u001b[0m     \u001b[43mexit\u001b[49m()\n",
+      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\testing\\../src\\rpn.py:36\u001b[0m, in \u001b[0;36mRPN.build_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     33\u001b[0m filtered_anchor_offsets \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnon_maximum_suppression(pred_anchor_offsets, roi_scores)\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m# Transform the predicted offsets to absolute coordinates in the feature maps\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m roi_boxes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode_offsets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiltered_anchor_offsets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manchors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     38\u001b[0m model \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mModel(inputs\u001b[38;5;241m=\u001b[39mfeature_maps, outputs\u001b[38;5;241m=\u001b[39mroi_boxes)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
+      "File \u001b[1;32mc:\\Users\\david\\programming\\Projects\\RoofSpotter\\testing\\../src\\rpn.py:68\u001b[0m, in \u001b[0;36mRPN.decode_offsets\u001b[1;34m(self, offsets, anchors)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode_offsets\u001b[39m(\u001b[38;5;28mself\u001b[39m, offsets, anchors):\n\u001b[1;32m---> 68\u001b[0m     \u001b[43mexit\u001b[49m()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'exit' is not defined"
      ]
     }
