Change order of operations to decode first and then apply NMS in the RPN

--- a/testing/component_testing.ipynb
+++ b/testing/component_testing.ipynb
@@ -10,6 +10,7 @@
     "sys.path.append('../src')\n",
     "\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "\n",
     "from data_loading import BavarianBuildingDataset, generator\n",
     "from visualize import Visualizer\n",
@@ -119,11 +120,24 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roi_boxes.shape: (None, 4096, 4)\n",
+      "reshaped_coordinates.shape: (None, 4)\n",
+      "reshaped_scores.shape: (None, 2)\n",
+      "reshaped_scores.shape: (None,)\n",
+      "selected_indices.shape: (None,)\n",
+      "filtered_offsets.shape: (None, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "rpn = RPN(config, backbone)\n",
     "\n",
-    "# roi_boxes = rpn.model.predict(feature_maps)\n",
+    "roi_boxes = rpn.model.predict(feature_maps)\n",
     "# Visualizer.display_rois(testing_image[0], roi_boxes_viz, roi_scores)"
    ]
   }
