Fix NMS in RPN and set fixed batch size

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -32,30 +32,20 @@
      "output_type": "stream",
      "text": [
       "Model: \"Mask_RCNN\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      " input_image (InputLayer)       [(None, 250, 250, 3  0           []                               \n",
-      "                                )]                                                                \n",
-      "                                                                                                  \n",
-      " Backbone (Functional)          (None, 8, 8, 2048)   23587712    ['input_image[0][0]']            \n",
-      "                                                                                                  \n",
-      " RPN (Functional)               [(None, 4),          9486944     ['Backbone[0][0]']               \n",
-      "                                 (None, 2)]                                                       \n",
-      "                                                                                                  \n",
-      " ROI_Align (Functional)         (None, 7, 7, 2048)   0           ['Backbone[0][0]',               \n",
-      "                                                                  'RPN[0][0]']                    \n",
-      "                                                                                                  \n",
-      " Classifier (Functional)        [(None, 2),          102771722   ['ROI_Align[0][0]']              \n",
-      "                                 (None, 2, 4)]                                                    \n",
-      "                                                                                                  \n",
-      " Mask_Head (Functional)         (None, 14, 14, 2)    5571842     ['ROI_Align[0][0]']              \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 141,418,220\n",
-      "Trainable params: 117,834,604\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_image (InputLayer)    [(16, 250, 250, 3)]       0         \n",
+      "                                                                 \n",
+      " Backbone (Functional)       (16, 8, 8, 2048)          23587712  \n",
+      "                                                                 \n",
+      " RPN (Functional)            (16, None, 4)             9601856   \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 33,189,568\n",
+      "Trainable params: 9,605,952\n",
       "Non-trainable params: 23,583,616\n",
-      "__________________________________________________________________________________________________\n"
+      "_________________________________________________________________\n"
      ]
     }
    ],
