Add sampling-point-generation tests and fix phrasing in multiple files

--- a/testing/component_testing.ipynb
+++ b/testing/component_testing.ipynb
@@ -44,6 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "image_dir: ../data/bbd250-image/\n",
+      "mask_dir: ../data/bbd250-umring/\n",
       "image_shape: (250, 250, 3)\n",
       "num_classes: 2\n",
       "batch_size: 16\n",
@@ -58,6 +60,7 @@
       "rpn_score_threshold: 0.5\n",
       "rpn_optimizer: adam\n",
       "roi_align_pool_size: (7, 7)\n",
+      "roi_align_sample_grid: (2, 2)\n",
       "classifier_dense_units: 1024\n",
       "classifier_optimizer: adam\n",
       "mask_head_conv_filters: 256\n",
@@ -88,7 +91,7 @@
     }
    ],
    "source": [
-    "dataset = BavarianBuildingDataset(image_dir='../data/bbd250-image', mask_dir='../data/bbd250-umring')\n",
+    "dataset = BavarianBuildingDataset(image_dir=config.image_dir, mask_dir=config.mask_dir)\n",
     "gen = generator(dataset, dataset.train_test_val_split()[1], batch_size=config.batch_size)\n",
     "images, masks = next(gen)\n",
     "\n",
@@ -106,7 +109,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 2s 2s/step\n"
+      "1/1 [==============================] - 3s 3s/step\n",
+      "(16, 8, 8, 2048)\n",
+      "(8, 8, 2048)\n"
      ]
     },
     {
@@ -136,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 4s 4s/step\n"
+      "1/1 [==============================] - 9s 9s/step\n"
      ]
     },
     {
