--- a/testing/anchors.ipynb
+++ b/testing/anchors.ipynb
@@ -61,7 +61,7 @@
     "                    [1., 3.],\n",
     "                    [1., 4.]])\n",
     "\n",
-    "offsets = np.random.uniform(low=-2, high=2, size=(64))\n",
+    "offsets = np.random.uniform(low=-2, high=2, size=64)\n",
     "offsets[2::4] = np.abs(offsets[2::4])\n",
     "offsets[3::4] = np.abs(offsets[3::4])\n",
     "\n",
